--- a/config/config.toml
+++ b/config/config.toml
@@ -16,13 +16,13 @@ bootnodes = [
 
 [rpc]
 disable = false
-interface = "local"
+interface = "all"
 apis = ["web3", "eth", "net", "personal", "parity", "parity_set", "traces", "rpc", "parity_accounts"]
 
 [websockets]
 disable = false
 port = 8546
-interface = "local"
+interface = "all"
 origins = ["none"]
 apis = ["web3", "eth", "pubsub", "net", "parity", "parity_pubsub", "traces", "rpc", "shh", "shh_pubsub"]
 hosts = ["none"]
